@@ -8,6 +8,9 @@ Zope Changes
 
    Bugs fixed
 
+      - Collector #1983: Specifying session-resolution-seconds >= 1200 caused
+        Zope startup to fail.
+
       - Collector #2169: webdav.Resource.COPY did not send ObjectClonedEvent.
 
       - Updated Five to bugfix release 1.3.7.
